# igloodb

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  deny.toml  docker-compose.yml  igloo.example.toml
.github/workflows/: docs.yml  rust.yml
docs/: ARCHITECTURE.md
scripts/: seed_test_db.sql
src/: adbc_postgres.rs  cache_layer.rs  catalog.rs  cdc_sync.rs  config.rs  crypto_metrics.rs  datafusion_engine.rs  errors.rs  lib.rs  main.rs  postgres_table.rs  pushdown.rs  server.rs
tests/: catalog.rs  pgwire_server.rs  postgres_federation.rs  pushdown.rs
