[package]
name = "igloo"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.1"

authors = ["Igloo Contributors"]
description = "An experimental SQL query engine with an intelligent caching layer, built on DataFusion, Arrow and ADBC."
license = "MIT"

[dependencies]
# All arrow crates in the tree resolve to the same major version (53):
# datafusion 44 depends on arrow ^53.3 and adbc_core 0.16 on arrow-array ^53.1.
arrow = "53"
datafusion = "44"
adbc_core = { version = "0.16", features = ["driver_manager"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
num_cpus = "1"
pgwire = "0.30.2"
futures = "0.3.32"
